# modelmint_back

./: .env.example  agent.py  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 93d0708acd30_change_type_to_enum.py  aac4d3ef4e38_add_synthetic_data.py  c8a3d3a24d2e_change_type_to_enum.py
modelmint_back/: __init__.py  di.py  gpu_cloud_tools.py  settings.py
modelmint_back/core/: __init__.py  di.py  settings.py  startup.py
modelmint_back/gpu_cloud_providers/: __init__.py  base.py  lambda_labs.py
modelmint_back/mcp_tools/: __init__.py  gpu_cloud_tools.py  huggingface_tools.py  synthetic_data_generation_tools.py  training_model_tools.py
modelmint_back/models/: synthetic_data_models.py
scripts/: setup_ssh_env.sh
